# text-search

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: book.rs  main.rs
examples/: filter.rs  index_and_filter_delete.rs  index_and_term_delete.rs
examples/book/: mod.rs
src/: indexer.rs  lib.rs
template/: Cargo.toml
template/src/: field_info.rs  index_type.rs  indexable.rs  lib.rs  struct_info.rs  symbol.rs
text-search-core/: Cargo.toml
text-search-core/src/: field_info.rs  field_type.rs  index_type.rs  lib.rs
text-search-derive/: Cargo.toml
text-search-derive/src/: context.rs  field.rs  field_info.rs  indexable.rs  lib.rs  models.rs  symbol.rs  utils.rs
