[package]
name = "text-search"
version = "0.1.0"
edition = "2024"
description = "A simple easy to use plug and play wrapper around tantivy for simple search scenarios."
homepage = "https://github.com/Salman-Sali/text-search"
readme = "README.md"
license = "MIT"
keywords = ["tantivy", "simple", "text", "search"]

[dependencies]
tantivy = "0.22.0"
text-search-core = { version = "0.1.0", path = "text-search-core" }
text-search-derive = { version = "0.1.0", path = "text-search-derive" }

[workspace]
members = [ "example" , "text-search-core", "text-search-derive"]
